updated the excel highlight

--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -147,6 +147,7 @@
                                     <div class='form-group'>
                                         <label>SkyBox <span class='text-info title customerName '></span></label>
                                         <input type='text' class='form-control skybox' name='skybox' required />
+                                        <input type='hidden' class='isBusiness'  value=''/>
                                     </div>
                                     <div class='form-group'>
                                         <label>Tracking #</label>
@@ -203,6 +204,7 @@
                                     <div class='form-group'>
                                         <label>SkyBox <span id='' class='text-info title customerName'></span></label>
                                         <input type='text' class='form-control skybox' name='skybox' required />
+                                        <input type='hidden' class='isBusiness'  value=''/>
                                     </div>
                                     <div class='form-group'>
                                         <label>Tracking #</label>
@@ -256,6 +258,7 @@
                                     </div>
                                     <div class='form-group'>
                                         <label>SkyBox <span id='' class='text-info title customerName'></span></label>
+                                        <input type='hidden' class='isBusiness'  value=''/>
                                         <input type='text' class='form-control skybox' name='skybox' required />
                                     </div>
                                     <div class='form-group'>
