--- a/views/pages/admin/customerEdit.ejs
+++ b/views/pages/admin/customerEdit.ejs
@@ -12,7 +12,7 @@
                         </div>
                         <div class="form-group">
                             <label for="exOne"> Name</label>
-                            <input type="text" class="form-control" name='firstname' id="firstname" placeholder="" required value='<%=customer.Name %>'>
+                            <input type="text" class="form-control" name='name' id="name" placeholder="" required value='<%=customer.Name %>'>
                         </div>
                      
                       
