--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -41,7 +41,12 @@
                                     <%if(Number(manifest.StageId) <= 2 ){%>
                                     <button type="button" class="btn btn-success btn-sm ship-manifest-btn" data-toggle='modal'
                                         data-target='#shipManifest'>Ship Manifest</button>
+                                       
                                     <%}%>
+                                    <%if( Number(manifest.StageId)>=2){%>
+                                        <button type="button" class="btn btn-info btn-sm ship-manifest-btn" data-toggle='modal'
+                                        data-target='#broker'>Send To Broker </button>
+                                        <%}%>
                                     <button type="button" class="btn btn-dark btn-sm export-manifest">Export Excel</button>
 
                                 </div>
@@ -75,14 +80,7 @@
                                                     </div>
                                                 </p>
                                                 <%}%>
-                                                <%if (manifest.StageId == 3) {%>
-                                                <p>
-                                                    
-                                                    <div class='form-group'>
-                                                        <button class='btn btn-info btn-sm' id="generateAwb">Generate AWB</button>
-                                                    </div>
-                                                </p>
-                                                <%}%>
+                                               
                               
                             </div>
                             <div class='col-md-9'>
@@ -342,6 +340,34 @@
                 <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
 
                 <button type="button" class="btn btn-success ship-manifest" id='ship-manifest'>Ship Manifest</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="broker" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true"
+    style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel2">Send to Broker (Manifest <%= mid %>)</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <label>Broker Name</label>
+                <input type='text' id='broker-name' class='form-control broker-email' value='Stevan Thomas'>
+
+                <label>Broker Email</label>
+                <input type='text' id='broker-email' class='form-control broker-email' value='stevan@prodigysoft.net'>
+            </div>
+            <div class="modal-footer">
+
+
+                <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+
+                <button type="button" class="btn btn-success email-broker" id='email-broker'>Send <i class='icon-plane'></i></button>
             </div>
         </div>
     </div>
