--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -364,10 +364,10 @@
             </div>
             <div class="modal-footer">
 
-
+                <span class='text-left' id='eb-message'></span>
                 <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
 
-                <button type="button" class="btn btn-success email-broker" id='email-broker'>Send <i class='icon-plane'></i></button>
+                <button type="button" class="btn btn-success email-broker" id='email-broker'>Send <i id='eb-icon' class='icon-plane'></i></button>
             </div>
         </div>
     </div>
