updated the redis services

--- a/views/pages/admin/customers.ejs
+++ b/views/pages/admin/customers.ejs
@@ -25,7 +25,7 @@
                 <ul class="pagination">
                     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
                   <% for(var i = pagerInfo.startPage; i <=pagerInfo.endPage; i++) { %>
-                    <li class="page-item"><a class="page-link" href="/admin/customers/<%=i%>">  <%= i %></a></li>
+                    <li class="page-item"><a class="page-link" href="/admin/customersv1/<%=i%>">  <%= i %></a></li>
                   <% } %>
                     <li class="page-item"><a class="page-link" href="#">...</a></li>
                     <li class="page-item"><a class="page-link" href="#">Next</a></li>
