--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -18,7 +18,7 @@
                     <a href='/admin/users'>Users</a>
                 </li>
                 <li>
-                <a href='/admin/customers'>Customers</a>
+                <a href='/admin/customersV1'>Customers</a>
             </li>
 
             </ul>
