--- a/views/pages/admin/customerEdit.ejs
+++ b/views/pages/admin/customerEdit.ejs
@@ -7,22 +7,22 @@
             <div class="card-body">
                     <div class="form-group">
                             <label for="exOne">Skybox</label>
-                            <input type="text" class="form-control" name='skybox' id="skybox" placeholder="" required readonly value='<%=customer.SkyBox %>'>
+                            <input type="text" class="form-control" name='skybox' id="skybox" placeholder="" required readonly value='<%=customer.skybox %>'>
                             <input type='hidden' value = '<%=customer.Id%>' name='id' id="id">
                         </div>
                         <div class="form-group">
                             <label for="exOne"> Name</label>
-                            <input type="text" class="form-control" name='name' id="name" placeholder="" required value='<%=customer.Name %>'>
+                            <input type="text" class="form-control" name='name' id="name" placeholder="" required value='<%=customer.name %>'>
                         </div>
                      
                       
                 <div class="form-group">
                     <label for="exOne">Email address</label>
-                    <input type="email" class="form-control" id="email" name='email' placeholder="name@example.com" value='<%=customer.Email %>'>
+                    <input type="email" class="form-control" id="email" name='email' placeholder="name@example.com" value='<%=customer.email %>'>
                 </div>
                 <div class="form-group">
                     <label for="exOne">Mobile</label>
-                    <input type="text" class="form-control" id="mobile" name='mobile' placeholder="(868)-xxx-xxxx" value='<%=customer.Mobile %>'>
+                    <input type="text" class="form-control" id="mobile" name='mobile' placeholder="(868)-xxx-xxxx" value='<%=customer.mobile %>'>
                 </div>
                 <div class="form-group">
                     <label for="exOne">Mobile</label>
@@ -42,11 +42,8 @@
                 </div>
                 <div class="form-group">
                     <label for="exOne">Is Business </label>
-                    <% var isBusiness = ''; 
-                    if (customer.IsBusiness){
-                        isBusiness = 'checked'
-                    } %>
-                    <input type="checkbox" class="form-control" id="isBusiness" name='isBusiness' style='width:40px;' <%= isBusiness %> >
+                   
+                    <input type="checkbox" class="form-control" id="isBusiness" name='isBusiness' style='width:40px;' >
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button> <button type="button" class="btn btn-primary">Cancel</button>
                 
