--- a/views/pages/admin/customerSearch.ejs
+++ b/views/pages/admin/customerSearch.ejs
@@ -10,18 +10,29 @@
         <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
             <div class="card">
                 <div class="card-header">Customers </div>
-                <div class="card-body"><form method="POST">
+                <div class="card-body"><form id='searchFrm' method="POST">
                         <div class='row'>
-                           
-                            <div class='col-md-6  mr-0 pr-0'><input name='searchText' class="form-control form-control-sm " type="text" placeholder="search customers"></div>
+                        <input type='hidden'  name='rpage' id='rpage' value='1' />
+                            <div class='col-md-6  mr-0 pr-0'><input value='<%=searchText%>' name='searchText' class="form-control form-control-sm " type="text" placeholder="search customers"></div>
                             <div class='col-md-5 ml-0 pl-0'><button class='btn btn-primary btn-sm ' type="submit"> <i class='icon-search'></i></button> </div>
                             <div class='col-md-1 '></div>
                         
                         </div>
                            </form>
+                           
+                           
                 <table id='customerTable' class='table table-bordered table-inverse pt-2 mt-2' style='width:100%'>
 
                 </table>
+                <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+              <% for(var i = pagerInfo.startPage; i <=pagerInfo.endPage; i++) { %>
+                <li class="page-item-search" data-id='<%=i %>'><a data-id='<%=i %>' class="page-link" href="#">  <%= i %></a></li>
+              <% } %>
+                
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+              </ul>
+            </div>
                 
                 </div>
             </div>
