updated the processing

--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -42,17 +42,14 @@
                 <li class='pb-1' style='border-bottom:1px solid #e9ecef!important;'>
                     <a href='/warehouse/list-hazmat' class="">HAZMAT</a>
                 </li>
-                <li>
-                    <a href='#' class="">Confirmed Duties</a>
-                </li>
+               
                 
                 <li>
-                    <a href='#' class="">Trinidad Processing</a>
+                    <a href='/warehouse/processing' class="">Trinidad Processing</a>
                 </li>
-                <li class='mt-2'>
-                <a href='#' class="">Manifest Duties</a>
-            </li>
-
+                <li>
+                    <a href='/warehouse/store-check-in' class="">Store Check-in</a>
+                </li>
 
 
             </ul>
