--- a/views/pages/warehouse/store-checkin.ejs
+++ b/views/pages/warehouse/store-checkin.ejs
@@ -14,7 +14,7 @@
                        
                     <div class='form-group '>
                         <label>Scan Bin/Shelf</label>
-                        <input type='text' class='form-control' id='bin' placeholder="Tracking #"/>
+                        <input type='text' class='form-control' id='bin' placeholder="Bin #"/>
                     </div>
                     <div class='form-group '>
                             <label>Scan Package</label>
@@ -32,6 +32,7 @@
                             <th>Skybox</th>
                             <th>Cusomter</th>
                             <th>Tracking #</th>
+                            <th>Location </th>
                         </tr>
                     </table>
                 </div>
@@ -43,4 +44,4 @@
         </div>
     </div>
   </div>
-  <% block('scripts').append('<script src="/js/packages/processing.js"></script>')%>
+  <% block('scripts').append('<script src="/js/packages/store-processing.js"></script>')%>
