sidebar, driver & routes added.

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -100,6 +100,94 @@
 						</ul>
 					</div>
 				</li>
+				<li class="nav-item">
+					<a data-toggle="collapse" href="#stores">
+						<i class="fas fa-store"></i>
+						<p>Stores</p>
+						<span class="caret"></span>
+					</a>
+					<div class="collapse" id="stores">
+						<ul class="nav nav-collapse">
+							<li>
+								<a href="/users/change-pass">
+									<span class="sub-item">List</span>
+								</a>
+							</li>
+							<li>
+								<a href="/logout">
+									<span class="sub-item">Checkout</span>
+								</a>
+							</li>
+							<li>
+								<a href="/logout">
+									<span class="sub-item">Check In Package</span>
+								</a>
+							</li>
+							<li>
+								<a href="/logout">
+									<span class="sub-item">Soft Delete</span>
+								</a>
+							</li>
+							<li>
+								<a href="/logout">
+									<span class="sub-item">Add</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a data-toggle="collapse" href="#customers">
+						<i class="fas fa-users"></i>
+						<p>Customers</p>
+						<span class="caret"></span>
+					</a>
+					<div class="collapse" id="customers">
+						<ul class="nav nav-collapse">
+							<li>
+								<a href="/users/change-pass">
+									<span class="sub-item">Create</span>
+								</a>
+							</li>
+							<li>
+								<a href="/logout">
+									<span class="sub-item">Incoming Packages</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a data-toggle="collapse" href="#fleet">
+						<i class="fas fa-truck"></i>
+						<p>Fleet Management</p>
+						<span class="caret"></span>
+					</a>
+					<div class="collapse" id="fleet">
+						<ul class="nav nav-collapse">
+							<li>
+								<a href="/fleet/vehicles">
+									<span class="sub-item">Vehicles</span>
+								</a>
+							</li>
+							<li>
+								<a href="/fleet/flights">
+									<span class="sub-item">Flights</span>
+								</a>
+							</li>
+							<li>
+								<a href="/fleet/drivers">
+									<span class="sub-item">Drivers</span>
+								</a>
+							</li>
+							<li>
+								<a href="/fleet/routes">
+									<span class="sub-item">Routes</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</li>
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
 						<i class="fa fa-ellipsis-h"></i>
