--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -235,15 +235,15 @@
 				<li class="nav-item dropdown hidden-caret">
 					<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
 						<div class="avatar-sm">
-							<img src="https://via.placeholder.com/60x60" alt="..." class="avatar-img rounded-circle">
+							<img src="/img/logo-square.jpg" alt="..." class="avatar-img rounded-circle">
 						</div>
 					</a>
 					<ul class="dropdown-menu dropdown-user animated fadeIn">
 						<div class="dropdown-user-scroll scrollbar-outer">
 							<li>
 								<div class="user-box">
-									<div class="avatar-lg"><img src="https://via.placeholder.com/60x60"
-											alt="image profile" class="avatar-img rounded"></div>
+									<div class="avatar-lg"><img src="/img/logo-square.jpg" alt="image profile"
+											class="avatar-img rounded"></div>
 									<div class="u-text">
 										<h4><%=luser%></h4>
 										<p class="text-muted">hello@example.com</p><a href="profile.html"
