driver, routes page css updated

--- a/views/pages/admin/users.ejs
+++ b/views/pages/admin/users.ejs
@@ -2,8 +2,9 @@
 <div class='gutters'>
     <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
         <div class="card">
-            <div class="card-header">System Users
-                <a href='/admin/user/' class='btn btn-primary float-right'>Add User</a>
+            <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
+                <div class="card-title">System Users</div>
+                <a href='/admin/user/' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>
             </div>
             <div class="card-body">
                 <table class="table m-0">
