--- a/views/pages/fleet/vehicles.ejs
+++ b/views/pages/fleet/vehicles.ejs
@@ -2,8 +2,11 @@
 <div class='gutters'>
 	<div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
 		<div class="card">
-			<div class="card-header">Vehicles
-				<a href='/fleet/addvehicle' class='btn btn-primary float-right'>Add Vehicle</a>
+			<div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
+				<div class="card-title">Vehicles</div>
+				<div class="ml-md-auto">
+					<a href='/fleet/addvehicle' class='btn btn-primary btn-round float-right'>Add Vehicle</a>
+				</div>
 			</div>
 			<div class="card-body">
 				<table class="table m-0">
