--- a/views/pages/fleet/drivers.ejs
+++ b/views/pages/fleet/drivers.ejs
@@ -2,8 +2,9 @@
 <div class='gutters'>
 	<div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
 		<div class="card">
-			<div class="card-header">
-				<a href='/fleet/adddriver' class='btn btn-primary btn-round float-right'>Add Driver</a>
+			<div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
+				<div class="card-title">Drivers</div>
+				<a href='/fleet/adddriver' class='btn btn-primary btn-round ml-md-auto float-right'>Add Driver</a>
 			</div>
 			<div class="card-body">
 				<table class="table m-0">
