--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 			<ul class="nav nav-primary">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a data-toggle="collapse" href="#admin" class="collapsed" aria-expanded="false">
 						<i class="fas fa-home"></i>
 						<p>Admin</p>
