updated the login page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 		content="Login, Unify Login, Admin, Dashboard, Bootstrap4, Sass, CSS3, HTML5, Responsive Dashboard, Responsive Admin Template, Admin Template, Best Admin Template, Bootstrap Template, Themeforest" />
 	<meta name="author" content="Bootstrap Gallery" />
 	<link rel="shortcut icon" href="img/favicon.jpg" />
-	<title>Tropical Express Core</title>
+	<title>9-5 Admin Portal</title>
 
 	<!-- Common CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -34,7 +34,7 @@
 							<div class="col-xl-4 col-lg-5 col-md-6 col-sm-12">
 								<div class="login-box">
 									<a href="#" class="login-logo">
-										<img src="img/st-logo.png" alt="Tropical Express" style='max-height:75px;' />
+										<img src="/img/logo.jpg" alt="9-5 Shipping" style='max-height:75px;' />
 									</a>
 									<div class="input-group">
 										<span class="input-group-addon" id="username"><i
