--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -4,7 +4,7 @@
 		<div class="sidebar-content">
 			<div class="user">
 				<div class="avatar-sm float-left mr-2">
-					<img src="/img/logo-square.jpg" alt="..." class="avatar-img rounded-circle">
+					
 				</div>
 				<div class="info">
 					<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
@@ -72,14 +72,14 @@
 					</a>
 					<div class="collapse" id="warehouse">
 						<ul class="nav nav-collapse">
+								<li>
+										<a href="/warehouse/list-manifest">
+											<span class="sub-item">Package Check-in FLL</span>
+										</a>
+									</li>
 							<li>
 								<a href="/warehouse/list-manifest">
 									<span class="sub-item">Air Cargo</span>
-								</a>
-							</li>
-							<li>
-								<a href="/warehouse/list-ocean">
-									<span class="sub-item">Ocean Cargo</span>
 								</a>
 							</li>
 							<li>
@@ -89,7 +89,7 @@
 							</li>
 							<li>
 								<a href="/warehouse/processing">
-									<span class="sub-item">Trinidad Processing</span>
+									<span class="sub-item">Bahamas Processing</span>
 								</a>
 							</li>
 							<li>
