--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -11,8 +11,8 @@
 	<meta name="keywords"
 		content="Admin, Dashboard, Bootstrap4, Sass, CSS3, HTML5, Responsive Dashboard, Responsive Admin Template, Admin Template, Best Admin Template, Bootstrap Template, Themeforest" />
 	<meta name="author" content="Bootstrap Gallery" />
-	<link rel="shortcut icon" href="/img/favicon.jpg" />
-	<title>Tropical Express Core 1.0</title>
+	<!-- <link rel="shortcut icon" href="/img/favicon.jpg" /> -->
+	<title>9-5 Imports </title>
 
 	<script src="/assets/js/plugin/webfont/webfont.min.js"></script>
 	<script>
@@ -59,7 +59,7 @@
 						<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
 							<div>
 								<h2 class="text-white pb-2 fw-bold"><%=title %></h2>
-								<h5 class="text-white op-7 mb-2">Welcome to Tropical Express Core 1.0</h5>
+								<h5 class="text-white op-7 mb-2">Welcome to 9-5 Imports</h5>
 							</div>
 							<!-- <div class="ml-md-auto py-2 py-md-0">
 								<a href="#" class="btn btn-white btn-border btn-round mr-2">Manage</a>
@@ -83,7 +83,7 @@
 		<!-- END: .app-container -->
 		<!-- BEGIN .main-footer -->
 		<footer class="main-footer fixed-btm">
-			Tropical Express 2018.
+			9-5 Imports 2019.
 		</footer>
 		<!-- END: .main-footer -->
 	</div>
