--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 	<meta name="keywords"
 		content="Login, Unify Login, Admin, Dashboard, Bootstrap4, Sass, CSS3, HTML5, Responsive Dashboard, Responsive Admin Template, Admin Template, Best Admin Template, Bootstrap Template, Themeforest" />
 	<meta name="author" content="Bootstrap Gallery" />
-	<link rel="shortcut icon" href="img/favicon.jpg" />
+	<!-- <link rel="shortcut icon" href="img/favicon.jpg" /> -->
 	<title>9-5 Admin Portal</title>
 
 	<!-- Common CSS -->
@@ -67,7 +67,7 @@
 	</div>
 	<footer class="main-footer no-bdr fixed-btm">
 		<div class="container">
-			Tropical Express 2018.
+			9-5 Imports 2019.
 		</div>
 	</footer>
 </body>
