--- a/views/pages/admin/saveUser.ejs
+++ b/views/pages/admin/saveUser.ejs
@@ -43,7 +43,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exOne">Mobile</label>
-                        <input type="text" class="form-control" id="mobile" name='mobile' placeholder="(868)-xxx-xxxx"
+                        <input type="text" class="form-control" id="mobile" name='mobile' placeholder="(xxx)-xxx-xxxx"
                             value='<%=user.mobile %>'>
                     </div>
                     <div class="form-group">
