--- a/views/pages/warehouse/add-package.ejs
+++ b/views/pages/warehouse/add-package.ejs
@@ -6,13 +6,13 @@
 
         <div class='card'>
             <div class="card-header col-md-12">
-                <h3> <%=manifest.title%> Data Entry</h3>
+                <h3> Receive New Package </h3>
             </div>
             <div class="card-body">
                 <ul class="nav nav-pills nav-primary" id="myTab" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-                            aria-controls="home" aria-selected="true" aria-expanded="true"><%=ColLabel%> Overview</a>
+                            aria-controls="home" aria-selected="true" aria-expanded="true">Overview</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
