--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -73,8 +73,13 @@
 					<div class="collapse" id="warehouse">
 						<ul class="nav nav-collapse">
 								<li>
-										<a href="/warehouse/list-manifest">
+										<a href="/warehouse/fll-new-package">
 											<span class="sub-item">Package Check-in FLL</span>
+										</a>
+									</li>
+									<li>
+										<a href="/warehouse/fll-no-docs">
+											<span class="sub-item">No Docs</span>
 										</a>
 									</li>
 							<li>
