--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -2,7 +2,8 @@
 <div class='gutters'>
     <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
   
-
+<input type='hidden' id="mid" value="0" />
+<input type='hidden' id="mtype" value="default" />
         <div class='card'>
             <div class="card-header col-md-12">
                 <h3>Add New Package</h3>
@@ -30,10 +31,9 @@
                                     <div class='form-group'>
                                         <label>Issue<span class='text-info title '></span></label>
                                        <select class='form-control issue'>
-                                           <option>Select</option>
-                                           <option value='0'>No Issue</option>
+                                           <option value='0'>Select</option>
                                            <option value='1'>No Docs</option>
-                                           <option value='2'>HAZMAT</option>
+                                          
                                        </select>
                                     </div>
                                     <div class='form-group'>
