--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -97,11 +97,11 @@
 									<span class="sub-item">Bahamas Processing</span>
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="/warehouse/store-check-in">
 									<span class="sub-item">Store Check-in</span>
 								</a>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</li>
@@ -114,27 +114,23 @@
 					<div class="collapse" id="stores">
 						<ul class="nav nav-collapse">
 							<li>
-								<a href="/users/change-pass">
+								<a href="/users/locations">
 									<span class="sub-item">List</span>
 								</a>
 							</li>
 							<li>
-								<a href="/logout">
+								<a href="#">
 									<span class="sub-item">Checkout</span>
 								</a>
 							</li>
 							<li>
-								<a href="/logout">
+								<a href="/warehouse/store-check-in">
 									<span class="sub-item">Check In Package</span>
 								</a>
 							</li>
+							
 							<li>
-								<a href="/logout">
-									<span class="sub-item">Soft Delete</span>
-								</a>
-							</li>
-							<li>
-								<a href="/logout">
+								<a href="/warehouse/location-add">
 									<span class="sub-item">Add</span>
 								</a>
 							</li>
