updated cube management

--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -235,7 +235,8 @@
                             <div class='col-md-3 pkg-form' style='<%=showForm%>'>
                                 <form method='post' id='unprocPackageForm'>
                                     <div class='form-group'>
-                                            <button type="button" class="btn btn-primary btn-sm close-manifest"> New Cube</button>
+                                            <button type="button" class="btn btn-primary btn-sm new-cube"> New Cube</button>
+                                            <span class='cubeId' style="display:none;">CUBE-<%=mid %>-1</span>
                                     </div>
                                     <div class='form-group'>
                                         <label>SkyBox <span id='' class='text-info title customerName'></span></label>
