updated the flight status

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -118,11 +118,11 @@
 									<span class="sub-item">List</span>
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="#">
 									<span class="sub-item">Checkout</span>
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="/warehouse/store-check-in">
 									<span class="sub-item">Check In Package</span>
@@ -130,7 +130,7 @@
 							</li>
 							
 							<li>
-								<a href="/warehouse/location-add">
+								<a href="/users/add-locations">
 									<span class="sub-item">Add</span>
 								</a>
 							</li>
