--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -28,6 +28,20 @@
                             <div class='col-md-3 pkg-form' >
 
                                 <form method='post' id='cargoPackageForm'>
+
+                                    <div class='form-group'>
+                                        <button type='button' class="btn btn-small btn-info new-awb">New AWB</button>
+                                        <button type='button' class="btn btn-small btn-info copy">Copy Last Package </button>
+                                    </div>
+                                    <div class='form-group'>
+                                            <label>AWB </label>
+                                            <input type='text' class='form-control awb' id='awb' name='awb' required />
+                                        </div>
+                                        <div class='form-group'>
+                                                <label>AWB Value</label>
+                                                <input type='text' class='form-control awbValue' name='awbValue' required />
+                                        </div>
+                                        <div class="separator-solid"></div>
                                     <div class='form-group'>
                                         <label>Issue<span class='text-info title '></span></label>
                                        <select class='form-control issue'>
@@ -36,6 +50,7 @@
                                           
                                        </select>
                                     </div>
+                                   
                                     <div class='form-group'>
                                         <label>SkyBox <span class='text-info title customerName '></span></label>
                                         <input type='text' class='form-control skybox' name='skybox' required />
@@ -59,14 +74,11 @@
                                         <label>Carrier</label>
                                         <input type='text' class='form-control carrier' name='carrier' />
                                     </div>
-                                    <div class='form-group'>
-                                        <label>Value</label>
-                                        <input type='text' class='form-control package-value' name='value' required />
-                                    </div>
-                                    <div class='form-group'>
+                                  
+                                    <!-- <div class='form-group'>
                                         <label>No. of Pieces</label>
                                         <input type='text' class='form-control pieces' name='pieces' required />
-                                    </div>
+                                    </div> -->
 
                                     <div class='form-group'>
                                         <label>Weight</label>
