--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -137,7 +137,7 @@
 						</ul>
 					</div>
 				</li>
-				<li class="nav-item">
+				<!-- <li class="nav-item">
 					<a data-toggle="collapse" href="#customers">
 						<i class="fas fa-users"></i>
 						<p>Customers</p>
@@ -157,7 +157,7 @@
 							</li>
 						</ul>
 					</div>
-				</li>
+				</li> -->
 				<li class="nav-item">
 					<a data-toggle="collapse" href="#fleet">
 						<i class="fas fa-truck"></i>
