--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -52,7 +52,7 @@
                                     </div>
                                    
                                     <div class='form-group'>
-                                        <label>SkyBox <span class='text-info title customerName '></span></label>
+                                        <label>PMB <span class='text-info title customerName '></span></label>
                                         <input type='text' class='form-control skybox' name='skybox' required />
                                     </div>
                                     <div class='form-group'>
