--- a/views/pages/fleet/drivers.ejs
+++ b/views/pages/fleet/drivers.ejs
@@ -4,7 +4,7 @@
 		<div class="card">
 			<div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
 				<div class="card-title">Drivers</div>
-				<a href='/fleet/adddriver' class='btn btn-primary btn-round ml-md-auto float-right'>Add Driver</a>
+				<a href='/fleet/add-driver' class='btn btn-primary btn-round ml-md-auto float-right'>Add Driver</a>
 			</div>
 			<div class="card-body">
 				<table class="table m-0">
