--- a/views/pages/fleet/routes.ejs
+++ b/views/pages/fleet/routes.ejs
@@ -4,7 +4,7 @@
 		<div class="card">
 			<div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
 				<div class="card-title">Routes</div>
-				<a href='/fleet/addroutes' class='btn btn-primary btn-round ml-md-auto float-right'>Add Routes</a>
+				<a href='/fleet/add-routes' class='btn btn-primary btn-round ml-md-auto float-right'>Add Routes</a>
 			</div>
 			<div class="card-body">
 				<table class="table m-0">
