--- a/views/pages/fleet/vehicles.ejs
+++ b/views/pages/fleet/vehicles.ejs
@@ -5,7 +5,7 @@
 			<div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
 				<div class="card-title">Vehicles</div>
 				<div class="ml-md-auto">
-					<a href='/fleet/addvehicle' class='btn btn-primary btn-round float-right'>Add Vehicle</a>
+					<a href='/fleet/add-vehicle' class='btn btn-primary btn-round float-right'>Add Vehicle</a>
 				</div>
 			</div>
 			<div class="card-body">
