--- a/views/pages/fleet/add-routes.ejs
+++ b/views/pages/fleet/add-routes.ejs
@@ -1,13 +1,13 @@
 <% layout('./shared/__template')%>
 <div class="card">
 	<div class="card-header">
-		<div class="card-title">Add Vehicle</div>
-		<div class="card-category">Add vehicle description here</div>
+		<div class="card-title">Add Route</div>
+		
 	</div>
 	<form id="exampleValidation">
 		<div class="card-body">
 			<div class="form-group form-show-validation row">
-				<label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Make <span
+				<label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Route Name<span
 						class="required-label">*</span></label>
 				<div class="col-lg-4 col-md-9 col-sm-8">
 					<input type="text" class="form-control" id="vehicle_make" name="name" placeholder="Enter Username"
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 			<div class="form-group form-show-validation row">
-				<label for="username" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Model <span
+				<label for="username" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Description <span
 						class="required-label">*</span></label>
 				<div class="col-lg-4 col-md-9 col-sm-8">
 					<div class="input-group">
@@ -27,25 +27,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="form-group form-show-validation row">
-				<label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Registration<span
-						class="required-label">*</span></label>
-				<div class="col-lg-4 col-md-9 col-sm-8">
-					<input type="email" class="form-control" id="email" placeholder="Enter Email" required>
-					<small id="emailHelp" class="form-text text-muted"></small>
-				</div>
-			</div>
-			<div class="form-group form-show-validation row">
-				<label for="password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Select Driver <span
-						class="required-label">*</span></label>
-				<div class="col-lg-4 col-md-9 col-sm-8">
-					<select class="form-control" id="password"
-						>
-					<option>Select Driver</option>
-					</select>
-				</div>
-			</div>
-		
+			
 		</div>
 		<div class="card-action">
 			<div class="row">
