--- a/views/pages/fleet/flights.ejs
+++ b/views/pages/fleet/flights.ejs
@@ -5,7 +5,7 @@
 		<div class="card">
 			<div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
 				<div class="card-title">Flights</div>
-				<a href='/fleet/addflight' class='btn btn-primary btn-round ml-md-auto float-right'>Add Flight</a>
+				<a href='/fleet/add-flight' class='btn btn-primary btn-round ml-md-auto float-right'>Add Flight</a>
 			</div>
 			<div class="card-body">
 				<table class="table m-0">
