Login Page CSS, UI Updated

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -4,7 +4,7 @@
 		<div class="sidebar-content">
 			<div class="user">
 				<div class="avatar-sm float-left mr-2">
-					
+
 				</div>
 				<div class="info">
 					<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
@@ -72,16 +72,16 @@
 					</a>
 					<div class="collapse" id="warehouse">
 						<ul class="nav nav-collapse">
-								<li>
-										<a href="/warehouse/fll-new-package">
-											<span class="sub-item">Package Check-in FLL</span>
-										</a>
-									</li>
-									<li>
-										<a href="/warehouse/fll-no-docs">
-											<span class="sub-item">No Docs</span>
-										</a>
-									</li>
+							<li>
+								<a href="/warehouse/fll-new-package">
+									<span class="sub-item">Package Check-in FLL</span>
+								</a>
+							</li>
+							<li>
+								<a href="/warehouse/fll-no-docs">
+									<span class="sub-item">No Docs</span>
+								</a>
+							</li>
 							<li>
 								<a href="/warehouse/list-manifest">
 									<span class="sub-item">Air Cargo</span>
@@ -128,7 +128,7 @@
 									<span class="sub-item">Check In Package</span>
 								</a>
 							</li>
-							
+
 							<li>
 								<a href="/warehouse/location-add">
 									<span class="sub-item">Add</span>
@@ -188,6 +188,12 @@
 							</li>
 						</ul>
 					</div>
+				</li>
+				<li class="nav-item">
+					<a href="#">
+						<i class="fa fa-file-alt"></i>
+						<p>Reports</p>
+					</a>
 				</li>
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
