--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,12 +52,13 @@
 						</div>
 					</div>
 					<div class="form-group form-action-d-flex mb-3">
-						<div class="custom-control custom-checkbox">
+						<!-- <div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="rememberme">
 							<label class="custom-control-label m-0" for="rememberme">Remember Me</label>
-						</div>
+						</div> -->
 						<a href="#"
-							class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign In</a>
+							class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
+							In</a>
 					</div>
 				</div>
 			</div>
