Add Route, Add Driver Page added.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>9-5 Admin Portal</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-	<link rel="icon" href="https://via.placeholder.com/32x32" type="image/x-icon" />
 
 	<!-- Fonts and icons -->
 	<script src="../assets/js/plugin/webfont/webfont.min.js"></script>
@@ -42,7 +41,7 @@
 					</div>
 					<div class="form-group">
 						<label for="password" class="placeholder"><b>Password</b></label>
-						<a href="#" class="link float-right">Forget Password ?</a>
+						<!-- <a href="#" class="link float-right forgot-password">Forget Password ?</a> -->
 						<div class="position-relative">
 							<input id="password" placeholder="Password" name="password" type="password"
 								class="form-control" required>
